# learnYouAHaskellForGreatGood

./: README.md
learn_you_a_haskell.hsproj/: .uuid  Chapter_2.hs  HS3.hs  Recursion.hs  _Ch5_higher_order_functions.hsplay  _Chapter_2.hsplay  _HS3.hsplay  _Recursion.hsplay  learnyouahaskell.cabal
learn_you_a_haskell.hsproj/Chapter_5/: Folds.hs  HigherOrderFunctions.hs  _Folds.hsplay  _HigherOrderFunctions.hsplay
learn_you_a_haskell.hsproj/Modules/: Data_Char.hs  Data_Map.hs  Data_Set.hs  Geometry.hs  Part1.hs  Part2.hs  _Data_Char.hsplay  _Data_Map.hsplay  _Data_Set.hsplay  _Part1.hsplay  _Part2.hsplay
learn_you_a_haskell.hsproj/Modules/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
learn_you_a_haskell.hsproj/Types/: Functors.hs  Lockers.hs  Records.hs  Shapes.hs  Trees.hs  Typeclasses.hs  _Functors.hsplay  _Lockers.hsplay  _Records.hsplay  _Shapes.hsplay  _Trees.hsplay  _Typeclasses.hsplay
