name: learnyouahaskell
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable learnyouahaskell
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      containers -any
  default-language: Haskell2010
  other-modules:
      HS3
      Chapter_2
      Modules.Part2
      Modules.Data_Char
      Modules.Geometry.Sphere
      Modules.Geometry.Cuboid
      Modules.Geometry.Cube
      Modules.Geometry
      Modules.Data_Set
      Modules.Part1
      Modules.Data_Map
      Recursion
      Types.Typeclasses
      Types.Records
      Types.Functors
      Types.Shapes
      Types.Lockers
      Types.Trees
      Chapter_5.Folds
      Chapter_5.HigherOrderFunctions
